--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
                 android:layout_marginBottom="24dp"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:hint="@string/hint_email"
+                android:autofillHints="emailAddress"
                 app:helperText="@string/helper_email"
                 app:helperTextTextColor="@color/preto"
                 app:startIconDrawable="@drawable/ic_email"
@@ -69,6 +70,7 @@
                 android:layout_marginBottom="24dp"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:hint="@string/hint_senha"
+                android:autofillHints="password"
                 app:helperText="@string/helper_senha"
                 app:helperTextTextColor="@color/preto"
                 app:startIconDrawable="@drawable/ic_senha"
